# openmc

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CODEOWNERS  Dockerfile  MANIFEST.in  build-deps.sh  cibw_before_build.sh  pre_wheel_install_dagmc_embree_dd_moab.sh  pyproject.toml  setup.cfg  setup.py  sphere_r2s_example.py  te.py  test_2.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-wheels.yml  build_wheels.yml  ci.yml  ci_openmc-notebooks.yaml  docker-publish-manylinux.yml  format-check.yml  lint.yml  wheels.yml
cmake/Modules/: FindCython.cmake  UseCython.cmake
docs/source/: conf.py
examples/assembly/: assembly.py
examples/custom_source/: show_flux.py
examples/pincell/: build_xml.py  plot_spectrum.py
examples/pincell_depletion/: restart_depletion.py  run_depletion.py
include/openmc/: capi.h
openmc/: __init__.py  arithmetic.py  bounding_box.py  cell.py  cmfd.py  config.py  element.py  executor.py  filter.py  filter_expansion.py  geometry.py  lattice.py  material.py  mesh.py  mgxs_library.py  plots.py  plotter.py  polynomial.py  region.py  search.py  settings.py  source.py  statepoint.py  summary.py  surface.py  tallies.py  tally_derivative.py  tracks.py  trigger.py  universe.py  volume.py  weight_windows.py
openmc/data/: __init__.py  ace.py  angle_distribution.py  correlated.py  data.py  decay.py  endf.py  energy_distribution.py  fission_energy.py  function.py  kalbach_mann.py  laboratory.py  library.py  multipole.py  nbody.py  neutron.py  njoy.py  photon.py  product.py  reaction.py  reconstruct.pyx  resonance.py  resonance_covariance.py  thermal.py  thermal_angle_energy.py  uncorrelated.py  urr.py
openmc/deplete/: __init__.py  abc.py  chain.py  coupled_operator.py  cram.py  helpers.py  independent_operator.py  integrators.py  microxs.py  nuclide.py  openmc_operator.py  pool.py  reaction_rates.py  results.py  stepresult.py  transfer_rates.py
openmc/lib/: __init__.py  cell.py  core.py  error.py  filter.py  material.py  math.py  mesh.py  nuclide.py  plot.py  settings.py  tally.py  weight_windows.py
openmc/mgxs/: __init__.py  groups.py  library.py  mdgxs.py  mgxs.py
openmc/model/: __init__.py  funcs.py  model.py  surface_composite.py  triso.py
openmc/stats/: __init__.py  multivariate.py  univariate.py
scripts/: openmc-ace-to-hdf5  openmc-plot-mesh-tally  openmc-track-to-vtk  openmc-update-inputs  openmc-update-mgxs  openmc-voxel-to-vtk  openmc_ace_to_hdf5.py  openmc_pot_mesh_tally.py  openmc_update_inputs.py  openmc_voxel_to_vtk.py
src/: finalize.cpp  volume_calc.cpp
src/openmc/mgxs/: mdgxs.py
tests/: __init__.py  dummy_operator.py  test_matplotlib_import.py  testing_harness.py
tests/regression_tests/: conftest.py
tests/regression_tests/adj_cell_rotation/: test.py
tests/regression_tests/asymmetric_lattice/: test.py
tests/regression_tests/cmfd_feed/: test.py
tests/regression_tests/cmfd_feed_2g/: test.py
tests/regression_tests/cmfd_feed_ng/: test.py
tests/unit_tests/: __init__.py  conftest.py  test_bounding_box.py  test_cell.py  test_cell_instance.py  test_complex_cell_bb.py  test_config.py  test_cylindrical_mesh.py  test_data_decay.py  test_data_dose.py  test_data_kalbach_mann.py  test_data_misc.py  test_data_multipole.py  test_data_neutron.py  test_data_photon.py  test_data_thermal.py  test_deplete_activation.py  test_deplete_atom_number.py  test_deplete_chain.py  test_deplete_coupled_operator.py  test_deplete_cram.py  test_deplete_decay_products.py  test_deplete_fission_yields.py  test_deplete_independent_operator.py  test_deplete_integrator.py  test_deplete_microxs.py  test_deplete_nuclide.py  test_deplete_reaction.py  test_deplete_restart.py  test_deplete_resultslist.py  test_deplete_transfer_rates.py  test_element.py  test_endf.py  test_energy_cutoff.py  test_filters.py  test_geometry.py  test_heating_by_nuclide.py  test_lattice.py  test_lattice_discretization.py  test_lib.py  (+25 more)
tools/ci/: gha-install.py  gha-install.sh  manylinux.dockerfile
(+103 files in other folders)
