[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy",
    "cython",
    "scikit-build>=0.16.7",
    "cmake>=3.10.0",
    "h5py",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.macos]
skip = ["cp38-*", "cp311-*"]
before-all = "brew install homebrew/core/hdf5"

[tool.cibuildwheel.linux]
skip = ["cp36-*"]
manylinux-x86_64-image = "ghcr.io/h5py/manylinux2014_x86_64-hdf5"
